# pixelcc

./: .config  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pixel.cc  spotify  test  test.cc  test.txt  tests.cc  testspotify.cc  testwave  testwave.cc
include/: color.h  state.h  statemachine.h
scripts/: spotify.py
src/: Makefile  boids.cc  color.cc  color.h  conway.cc  conway.h  lorenz.cc  lorenz.h  spotify.cc  spotify.h  state.cc  state.h  statemachine.cc  test.py  wave.cc  wave.h
tests/: test.cc  testboids.cc  testconway.cc  testlorenz.cc  testspotify.cc  testwave.cc
